# docs/swagger.json
@@ -7,16 +7,63 @@
         "version": "0.1.0"
     },
     "paths": {
-        "/{nik}": {
+        "/check": {
             "get": {
-                "description": "Lookup pemilih (voter) data by NIK.",
+                "description": "Lookup pemilih (voter) data by NIK using a query parameter.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Voter"
                 ],
-                "summary": "Check NIK",
+                "summary": "Check NIK (query)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "NIK",
+                        "name": "nik",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response-check_nik_CheckNIKResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response-string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response-string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response-string"
+                        }
+                    }
+                }
+            }
+        },
+        "/{nik}": {
+            "get": {
+                "description": "Lookup pemilih (voter) data by NIK using a path parameter.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Voter"
+                ],
+                "summary": "Check NIK (path)",
                 "parameters": [
                     {
                         "type": "string",
